--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@okta/oidc-middleware": "0.0.6",
     "consolidate": "^0.15.1",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-openid-connect": "^2.19.2",
     "express-session": "^1.15.6",
