--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ AUTH0_CLIENT_ID=ZnQGVDI8erbHsddQXMK5u7jwgtexXJZW
 AUTH0_ISSUER_BASE_URL=https://dev-eccojn6a0hw0aetl.us.auth0.com
 
 
-OKTA_ISSUER_URI=https://una-infosec.us.auth0.com/
+OKTA_ISSUER_URI=https://lab06-0c17.onrender.com
 OKTA_CLIENT_ID=ZnQGVDI8erbHsddQXMK5u7jwgtexXJZW
 OKTA_CLIENT_SECRET=sAzIVlyCWHzrlm3mivVWoXzOcifJigMU_k13U-pUJzTEDvqrdnOLTRTNem7vZTwh
 REDIRECT_URI=https://lab06-0c17.onrender.com/dashboard
